--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <script defer src="js\script.js"></script>
 
-    <title>Omnifood &mdash; Never cook again!</title>
+    <title>Omnifood &mdash; Never Never cook again!</title>
   </head>
 
   <body>
