--- a/index.html
+++ b/index.html
@@ -183,6 +183,42 @@
         <!-- <div class="container grid grid--2-cols"></div> -->
       </section>
 
+      <section class="section-preferences">
+        <div class="ingredients-buttons">
+          <div class="like-dislike-block">
+            <a class="like-btn">+</a>
+            <a class="ingredient-btn">Avocado</a>
+            <a class="dislike-btn">-</a>
+          </div>
+          <div class="like-dislike-block">
+            <a class="like-btn">+</a>
+            <a class="ingredient-btn">Avocado</a>
+            <a class="dislike-btn">-</a>
+          </div>
+          <div class="like-dislike-block">
+            <a class="like-btn">+</a>
+            <a class="ingredient-btn">Avocado</a>
+            <a class="dislike-btn">-</a>
+          </div>
+          <div class="like-dislike-block">
+            <a class="like-btn">+</a>
+            <a class="ingredient-btn">Avocado</a>
+            <a class="dislike-btn">-</a>
+          </div>
+          <div class="like-dislike-block">
+            <a class="like-btn">+</a>
+            <a class="ingredient-btn">Avocado</a>
+            <a class="dislike-btn">-</a>
+          </div>
+          <div class="like-dislike-block">
+            <a class="like-btn">+</a>
+            <a class="ingredient-btn">Avocado</a>
+            <a class="dislike-btn">-</a>
+          </div>
+        </div>
+        <div class="recomendations">рекомендации блюд</div>
+      </section>
+
       <section class="section-slideshow">
         <div class="mySlides fade">
           <div class="numbertext"></div>
