feat preferences section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     ></script>
     <script defer src="js\script_slider.js"></script>
     <script defer src="js\script_slider_2.js"></script>
+    <script defer src="js\script_what_you_like.js"></script>
 
     <script defer src="js\script.js"></script>
 
@@ -183,41 +184,7 @@
         <!-- <div class="container grid grid--2-cols"></div> -->
       </section>
 
-      <section class="section-preferences">
-        <div class="ingredients-buttons">
-          <div class="like-dislike-block">
-            <a class="like-btn">+</a>
-            <a class="ingredient-btn">Avocado</a>
-            <a class="dislike-btn">-</a>
-          </div>
-          <div class="like-dislike-block">
-            <a class="like-btn">+</a>
-            <a class="ingredient-btn">Avocado</a>
-            <a class="dislike-btn">-</a>
-          </div>
-          <div class="like-dislike-block">
-            <a class="like-btn">+</a>
-            <a class="ingredient-btn">Avocado</a>
-            <a class="dislike-btn">-</a>
-          </div>
-          <div class="like-dislike-block">
-            <a class="like-btn">+</a>
-            <a class="ingredient-btn">Avocado</a>
-            <a class="dislike-btn">-</a>
-          </div>
-          <div class="like-dislike-block">
-            <a class="like-btn">+</a>
-            <a class="ingredient-btn">Avocado</a>
-            <a class="dislike-btn">-</a>
-          </div>
-          <div class="like-dislike-block">
-            <a class="like-btn">+</a>
-            <a class="ingredient-btn">Avocado</a>
-            <a class="dislike-btn">-</a>
-          </div>
-        </div>
-        <div class="recomendations">рекомендации блюд</div>
-      </section>
+      <section class="section-preferences"></section>
 
       <section class="section-slideshow">
         <div class="mySlides fade">
