--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     ></script>
     <script defer src="js\script_slider.js"></script>
     <script defer src="js\script_slider_2.js"></script>
-    <script defer src="js\script_what_you_like.js"></script>
+    <script defer type="module" src="js\script_what_you_like.js"></script>
 
     <script defer src="js\script.js"></script>
 
