--- a/index.html
+++ b/index.html
@@ -183,9 +183,11 @@
         <!-- <div class="container grid grid--2-cols"></div> -->
       </section>
 
-      <section class="section-preferences"></section>
+      <section class="section-preferences">
+        <!-- <img src="img\section_preferences.jpg"></img> -->
+      </section>
 
-      <div class="section-slideshow-2">
+      <section class="section-slideshow-2">
         <div class="mySlides2 slide1">
           <img src="img\lunch1.jpg" alt="" class="img" />
           <img src="img\lunch2.jpg" alt="" class="img" />
@@ -193,7 +195,12 @@
         </div>
         <a class="prev prev_2"><</a>
         <a class="next next_2">></a>
-      </div>
+        <div class="dots">
+          <span class="dot" data-slide="1"></span>
+          <span class="dot" data-slide="2"></span>
+          <span class="dot" data-slide="3"></span>
+        </div>
+      </section>
 
       <section class="section-meals" id="meals">
         <div class="container">
